--- a/setup.cfg
+++ b/setup.cfg
@@ -9,27 +9,20 @@ deps =
 setenv =
     SDL_AUDIODRIVER=disk
     SDL_VIDEODRIVER=dummy
-passenv =
-    PORTMIDI_INC_PORTTIME
 commands =
     python -m buildconfig -auto
-    pip install .
-    python -m pygame.tests
 
-[options.entry_points]
-pyinstaller40 =
-	hook-dirs = pygame.__pyinstaller:get_hook_dirs
 
 [isort]
 include_trailing_comma = True
-known_first_party = pygame
+known_first_party = testmod
 known_third_party = numpy, distutils, setuptools, sphinx
 line_length = 88
 multi_line_output = 3
 src_paths = src_py
 
 [pylint.MESSAGES CONTROL]
-extension-pkg-whitelist=pygame
+extension-pkg-whitelist=testmod
 enable=
     use-symbolic-message-instead,
 
